--- a/assets/styles/components/_fonts.scss
+++ b/assets/styles/components/_fonts.scss
@@ -14,111 +14,7 @@
 }
 
 @font-face {
-    font-family: 'danielbold';
-    src: url('../fonts/daniel-bold-webfont.eot');
-    src: url('../fonts/daniel-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/daniel-bold-webfont.woff2') format('woff2'),
-         url('../fonts/daniel-bold-webfont.woff') format('woff'),
-         url('../fonts/daniel-bold-webfont.ttf') format('truetype'),
-         url('../fonts/daniel-bold-webfont.svg#danielbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'danielregular';
-    src: url('../fonts/daniel-regular-webfont.eot');
-    src: url('../fonts/daniel-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/daniel-regular-webfont.woff2') format('woff2'),
-         url('../fonts/daniel-regular-webfont.woff') format('woff'),
-         url('../fonts/daniel-regular-webfont.ttf') format('truetype'),
-         url('../fonts/daniel-regular-webfont.svg#danielregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_black';
-    src: url('proxima_nova_alt_black-webfont.eot');
-    src: url('proxima_nova_alt_black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_black-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_black-webfont.woff') format('woff'),
-         url('proxima_nova_alt_black-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_black-webfont.svg#proxima_nova_altblack') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_black_italic';
-    src: url('proxima_nova_alt_black_italic-webfont.eot');
-    src: url('proxima_nova_alt_black_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_black_italic-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_black_italic-webfont.woff') format('woff'),
-         url('proxima_nova_alt_black_italic-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_black_italic-webfont.svg#proxima_nova_altblack_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_bold';
-    src: url('proxima_nova_alt_bold-webfont.eot');
-    src: url('proxima_nova_alt_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_bold-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_bold-webfont.woff') format('woff'),
-         url('proxima_nova_alt_bold-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_bold-webfont.svg#proxima_nova_alt_rgbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_bold_italic';
-    src: url('proxima_nova_alt_bold_italic-webfont.eot');
-    src: url('proxima_nova_alt_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_bold_italic-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_bold_italic-webfont.woff') format('woff'),
-         url('proxima_nova_alt_bold_italic-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_bold_italic-webfont.svg#proxima_nova_alt_rgBdIt') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_light';
-    src: url('proxima_nova_alt_light-webfont.eot');
-    src: url('proxima_nova_alt_light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_light-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_light-webfont.woff') format('woff'),
-         url('proxima_nova_alt_light-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_light-webfont.svg#proxima_nova_altlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_light_italic';
-    src: url('proxima_nova_alt_light_italic-webfont.eot');
-    src: url('proxima_nova_alt_light_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('proxima_nova_alt_light_italic-webfont.woff2') format('woff2'),
-         url('proxima_nova_alt_light_italic-webfont.woff') format('woff'),
-         url('proxima_nova_alt_light_italic-webfont.ttf') format('truetype'),
-         url('proxima_nova_alt_light_italic-webfont.svg#proxima_nova_altlight_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_alt_regular';
+    font-family: 'proxima_nova_regular';
     src: url('proxima_nova_alt_regular-webfont.eot');
     src: url('proxima_nova_alt_regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('proxima_nova_alt_regular-webfont.woff2') format('woff2'),
@@ -131,7 +27,7 @@
 }
 
 @font-face {
-    font-family: 'proxima_nova_alt_regular_italic';
+    font-family: 'proxima_nova_regular_italic';
     src: url('proxima_nova_alt_regular_italic-webfont.eot');
     src: url('proxima_nova_alt_regular_italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('proxima_nova_alt_regular_italic-webfont.woff2') format('woff2'),
@@ -143,3 +39,54 @@
 
 }
 
+@font-face {
+    font-family: 'proxima_nova_bold';
+    src: url('proxima_nova_alt_bold-webfont.eot');
+    src: url('proxima_nova_alt_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('proxima_nova_alt_bold-webfont.woff2') format('woff2'),
+         url('proxima_nova_alt_bold-webfont.woff') format('woff'),
+         url('proxima_nova_alt_bold-webfont.ttf') format('truetype'),
+         url('proxima_nova_alt_bold-webfont.svg#proxima_nova_alt_rgbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'proxima_nova_bold_italic';
+    src: url('proxima_nova_alt_bold_italic-webfont.eot');
+    src: url('proxima_nova_alt_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('proxima_nova_alt_bold_italic-webfont.woff2') format('woff2'),
+         url('proxima_nova_alt_bold_italic-webfont.woff') format('woff'),
+         url('proxima_nova_alt_bold_italic-webfont.ttf') format('truetype'),
+         url('proxima_nova_alt_bold_italic-webfont.svg#proxima_nova_alt_rgBdIt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'proxima_nova_semibold';
+    src: url('proxima_nova_alt_semibold-webfont.eot');
+    src: url('proxima_nova_alt_semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('proxima_nova_alt_semibold-webfont.woff2') format('woff2'),
+         url('proxima_nova_alt_semibold-webfont.woff') format('woff'),
+         url('proxima_nova_alt_semibold-webfont.ttf') format('truetype'),
+         url('proxima_nova_alt_semibold-webfont.svg#proxima_nova_altsemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'proxima_nova_semibold_italic';
+    src: url('proxima_nova_alt_semibold_italic-webfont.eot');
+    src: url('proxima_nova_alt_semibold_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('proxima_nova_alt_semibold_italic-webfont.woff2') format('woff2'),
+         url('proxima_nova_alt_semibold_italic-webfont.woff') format('woff'),
+         url('proxima_nova_alt_semibold_italic-webfont.ttf') format('truetype'),
+         url('proxima_nova_alt_semibold_italic-webfont.svg#proxima_nova_altSBdIt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
