--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,7 +2,6 @@
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
-@import "../../bower_components/font-awesome/scss/font-awesome.scss";
 @import "../../bower_components/include-media/dist/_include-media.scss";
 @import "../../bower_components/bootstrap/scss/bootstrap.scss";
 // endbower
@@ -20,4 +19,4 @@
 @import "plugins/magnificpopup";
 @import "layouts/footer";
 @import "layouts/header";
-@import "layouts/home";
+@import "layouts/front";
