--- a/assets/styles/components/_fonts.scss
+++ b/assets/styles/components/_fonts.scss
@@ -8,85 +8,86 @@
          url('../fonts/daniel-black-webfont.woff') format('woff'),
          url('../fonts/daniel-black-webfont.ttf') format('truetype'),
          url('../fonts/daniel-black-webfont.svg#danielblack') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'proxima_nova_regular';
+    font-family: 'proxima_nova';
     src: url('../fonts/proxima_nova_alt_regular-webfont.eot');
     src: url('../fonts/proxima_nova_alt_regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/proxima_nova_alt_regular-webfont.woff2') format('woff2'),
          url('../fonts/proxima_nova_alt_regular-webfont.woff') format('woff'),
          url('../fonts/proxima_nova_alt_regular-webfont.ttf') format('truetype'),
          url('../fonts/proxima_nova_alt_regular-webfont.svg#proxima_nova_alt_rgregular') format('svg');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'proxima_nova_regular_italic';
+    font-family: 'proxima_nova';
     src: url('../fonts/proxima_nova_alt_regular_italic-webfont.eot');
     src: url('../fonts/proxima_nova_alt_regular_italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/proxima_nova_alt_regular_italic-webfont.woff2') format('woff2'),
          url('../fonts/proxima_nova_alt_regular_italic-webfont.woff') format('woff'),
          url('../fonts/proxima_nova_alt_regular_italic-webfont.ttf') format('truetype'),
          url('../fonts/proxima_nova_alt_regular_italic-webfont.svg#proxima_nova_altRgIt') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 400;
+    font-style: italic;
 
 }
 
 @font-face {
-    font-family: 'proxima_nova_bold';
-    src: url('../fonts/proxima_nova_alt_bold-webfont.eot');
-    src: url('../fonts/proxima_nova_alt_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/proxima_nova_alt_bold-webfont.woff2') format('woff2'),
-         url('../fonts/proxima_nova_alt_bold-webfont.woff') format('woff'),
-         url('../fonts/proxima_nova_alt_bold-webfont.ttf') format('truetype'),
-         url('../fonts/proxima_nova_alt_bold-webfont.svg#proxima_nova_alt_rgbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_bold_italic';
-    src: url('../fonts/proxima_nova_alt_bold_italic-webfont.eot');
-    src: url('../fonts/proxima_nova_alt_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/proxima_nova_alt_bold_italic-webfont.woff2') format('woff2'),
-         url('../fonts/proxima_nova_alt_bold_italic-webfont.woff') format('woff'),
-         url('../fonts/proxima_nova_alt_bold_italic-webfont.ttf') format('truetype'),
-         url('../fonts/proxima_nova_alt_bold_italic-webfont.svg#proxima_nova_alt_rgBdIt') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'proxima_nova_semibold';
+    font-family: 'proxima_nova';
     src: url('../fonts/proxima_nova_alt_semibold-webfont.eot');
     src: url('../fonts/proxima_nova_alt_semibold-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/proxima_nova_alt_semibold-webfont.woff2') format('woff2'),
          url('../fonts/proxima_nova_alt_semibold-webfont.woff') format('woff'),
          url('../fonts/proxima_nova_alt_semibold-webfont.ttf') format('truetype'),
          url('../fonts/proxima_nova_alt_semibold-webfont.svg#proxima_nova_altsemibold') format('svg');
-    font-weight: normal;
+    font-weight: 600;
     font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'proxima_nova_semibold_italic';
+    font-family: 'proxima_nova';
     src: url('../fonts/proxima_nova_alt_semibold_italic-webfont.eot');
     src: url('../fonts/proxima_nova_alt_semibold_italic-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/proxima_nova_alt_semibold_italic-webfont.woff2') format('woff2'),
          url('../fonts/proxima_nova_alt_semibold_italic-webfont.woff') format('woff'),
          url('../fonts/proxima_nova_alt_semibold_italic-webfont.ttf') format('truetype'),
          url('../fonts/proxima_nova_alt_semibold_italic-webfont.svg#proxima_nova_altSBdIt') format('svg');
-    font-weight: normal;
+    font-weight: 600;
+    font-style: italic;
+
+}
+
+@font-face {
+    font-family: 'proxima_nova';
+    src: url('../fonts/proxima_nova_alt_bold-webfont.eot');
+    src: url('../fonts/proxima_nova_alt_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/proxima_nova_alt_bold-webfont.woff2') format('woff2'),
+         url('../fonts/proxima_nova_alt_bold-webfont.woff') format('woff'),
+         url('../fonts/proxima_nova_alt_bold-webfont.ttf') format('truetype'),
+         url('../fonts/proxima_nova_alt_bold-webfont.svg#proxima_nova_alt_rgbold') format('svg');
+    font-weight: 700;
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'proxima_nova';
+    src: url('../fonts/proxima_nova_alt_bold_italic-webfont.eot');
+    src: url('../fonts/proxima_nova_alt_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/proxima_nova_alt_bold_italic-webfont.woff2') format('woff2'),
+         url('../fonts/proxima_nova_alt_bold_italic-webfont.woff') format('woff'),
+         url('../fonts/proxima_nova_alt_bold_italic-webfont.ttf') format('truetype'),
+         url('../fonts/proxima_nova_alt_bold_italic-webfont.svg#proxima_nova_alt_rgBdIt') format('svg');
+    font-weight: 700;
+    font-style: italic;
+
+}
+
