--- a/assets/styles/layouts/_front.scss
+++ b/assets/styles/layouts/_front.scss
@@ -1,12 +1,56 @@
-.video-wrapper {
-    position: relative;
+$icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>path{fill:white;}</style><path d="M34.857,3.613C20.084-4.861,8.107,2.081,8.107,19.106v125.637c0,17.042,11.977,23.975,26.75,15.509L144.67,97.275 c14.778-8.477,14.778-22.211,0-30.686L34.857,3.613z"/></svg>');
 
-    .play-video {
-        display: block;
-        height: 0;
-        overflow: hidden;
-        position: relative;
+.section {
+    @include padding-box();
+}
+
+.section-title {
+    text-align: center;
+}
+
+.video-wrapper {
+    display: block;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid $gray-light;
+    @include box-shadow(5px 5px 5px transparentize($gray-light, 0.4));
+
+    a {
+        &:before,
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            z-index: 1;
+            top: 50%;
+            left: 50%;
+            transform: translate3d(-50%,-50%,0);
+        }
+
+        &:before {
+            background-color: #000;
+            opacity: .8;
+            width: 100px;
+            height: 100px;
+            @include border-radius(50%);
+            @include transition(background .2s ease-out);
+        }
+
+        &:after {
+            width: 40px;
+            height: 40px;
+            margin-left: 4px;
+            background: url($icon-play) no-repeat 50%;
+        }
+
+        @include hover-focus {
+            &:before {
+                 background-color: $brand-primary;
+            }
+        }
     }
+
     img,
     iframe {
         display: block;
@@ -16,21 +60,56 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border: 0 none;
     }
 
-    &:before,
-    &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%,-50%,0);
-        width: 25px;
-        height: 25px;
-    }
+}
 
-    &:before {
-         background-color: $gray;
-    }
+.goals-wrapper {
+     @include list-unstyled();
+
+     li {
+         background-color: #fff;
+         border: 2px solid $gray-light;
+         @include border-radius($spacer);
+         @include padding-box($spacer, $grid-gutter-width/2);
+         display: flex;
+         flex-wrap: wrap;
+         align-items: center;
+
+         &:not(:last-child) {
+             margin-bottom: $spacer;
+         }
+
+         .thumb-wrapper {
+             flex: 1;
+             min-width: 80px;
+             text-align: center;
+         }
+
+         p {
+             flex: 10;
+             &:last-child {
+                 margin-bottom: 0;
+             }
+         }
+     }
+}
+
+.price-wrapper {
+     background-color: #fff;
+     max-width: 474px;
+     margin: 0 auto;
+     @include border-radius($spacer/2);
+     overflow: hidden;
+
+     header {
+         background-color: $gray-lightest;
+     }
+
+     .content {
+         @include padding-box();
+         padding-left: $grid-gutter-width*2;
+         padding-left: $grid-gutter-width*2;
+     }
 }
