--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import "../../bower_components/bootstrap/scss/bootstrap.scss";
 // endbower
 
+@import "common/functions";
 @import "common/mixins";
 @import "common/global";
 @import "components/carousel";
