--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "components/ripples";
 @import "components/togglebutton";
 @import "components/wp-classes";
+@import "plugins/jcarousel";
 @import "plugins/magnificpopup";
 @import "layouts/footer";
 @import "layouts/header";
