--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -33,6 +33,13 @@ h6 { font-size: 1rem; }
     h6 { font-size: 1.625rem; }
 }
 
+// buttons
+.btn {
+    @include box-shadow(none);
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
 // lead text
 .lead {
     color: $lead-color;
