--- a/assets/styles/components/_radios.scss
+++ b/assets/styles/components/_radios.scss
@@ -3,10 +3,7 @@
  */
 $radio-size: 20px;
 
-.form-horizontal .radio {
-  margin-bottom: 10px;
-}
-body:not(.mce-content-body) .radio input[type=radio]{
+body:not(.mce-content-body) .radio-wrapper input[type=radio]{
     opacity: 0;
     position: absolute;
     margin: 0;
@@ -17,8 +14,8 @@ body:not(.mce-content-body) .radio input[type=radio]{
     left: 0;
     pointer-events: none;
 }
-.radio {
-    transform: translateZ(0);
+.radio-wrapper {
+    transform: translate3d(0,0,0);
 
     label {
         cursor: pointer;
