--- a/assets/styles/plugins/_magnificpopup.scss
+++ b/assets/styles/plugins/_magnificpopup.scss
@@ -17,6 +17,19 @@
     opacity: 0;
 }
 
+// close button fix
+.mfp-image-holder .mfp-close,
+.mfp-iframe-holder .mfp-close {
+    width: auto;
+    height: 16px;
+    line-height: 16px;
+    right: 0;
+    top: auto;
+    bottom: 100%;
+    margin-bottom: $spacer/2;
+    padding: 0;
+}
+
 // Gallery lightbox
 .gallery-lightbox {
     background-color: #FFF;
