--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -26,7 +26,7 @@
 //
 // Grayscale and brand colors for use across Bootstrap.
 
-$gray-dark:                 #47433f;
+$gray-dark:                 #47443F;
 $gray:                      #a3a3a3;
 $gray-light:                #d7d7d7;
 $gray-lighter:              #ededed;
