--- a/assets/styles/components/_carousel.scss
+++ b/assets/styles/components/_carousel.scss
@@ -3,6 +3,7 @@
         .carousel-item {
             opacity: 0;
             transition-property: opacity;
+            transition-timing-function: ease-out;
 
             &.active {
                 opacity: 1;
