--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -4,10 +4,13 @@ $breakpoints: $grid-breakpoints;
 
 /*nice transitions for links*/
 a{
-    @include transition(color .2s ease-in-out, background .2s ease-out);
+    @include transition(color .2s ease-out, background .2s ease-out);
 }
 
-// responsive headings
+// headings
+h1, h2 {
+    font-family: $font-family-serif;
+}
 h1 { font-size: 1.75rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.375rem; }
