--- a/assets/styles/layouts/_front.scss
+++ b/assets/styles/layouts/_front.scss
@@ -1,7 +1,7 @@
 $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>path{fill:white;}</style><path d="M34.857,3.613C20.084-4.861,8.107,2.081,8.107,19.106v125.637c0,17.042,11.977,23.975,26.75,15.509L144.67,97.275 c14.778-8.477,14.778-22.211,0-30.686L34.857,3.613z"/></svg>');
 
 .section {
-    @include padding-box($grid-gutter-width*2);
+    @include padding-box($grid-gutter-width*2, 0);
 }
 
 .section-title {
@@ -463,6 +463,10 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
             }
         }
 
+        .icon {
+            display: none;
+        }
+
         @include media (">=md") {
             .icon {
                 content: "";
@@ -577,6 +581,7 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
     font-size: $font-size-base*1.1875;
     @include make-row(0);
     justify-content: space-between;
+    padding-top: $spacer*1.5;
 
     .column {
         @include make-col(0);
@@ -584,12 +589,28 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
 
         @include media (">=md") {
             &:nth-child(1) {
-                @include make-col-span(4);
+                @include make-col-span(5);
             }
             &:nth-child(2) {
                 @include make-col-span(5);
             }
         }
+
+        @include media (">=lg") {
+            &:nth-child(1) {
+                @include make-col-span(4);
+            }
+        }
+
+        @include media ("<md") {
+             &:not(:last-child) {
+                  margin-bottom: $spacer*2.5;
+             }
+        }
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     a {
@@ -603,7 +624,6 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
 
     .logo {
         @extend .hidden-sm-down;
-        margin-bottom: $spacer*2;
 
         img {
              max-width: 100%;
@@ -613,9 +633,13 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
     .contacts {
          @include list-unstyled();
 
+         @include media ("<md") {
+             margin-bottom: $spacer*2.5;
+         }
+
          li {
              &:not(:last-child) {
-                 margin-bottom: $spacer;
+                 margin-bottom: $spacer*1.5;
              }
          }
 
@@ -641,10 +665,43 @@ $icon-play: svg-inline('<svg x="0" y="0" viewBox="0 0 163.861 163.861"><style>pa
              max-width: 45px;
              max-height: 40px;
              fill: $gray;
+             @include transition(fill .2s ease-out);
+         }
+
+         a {
+             @include hover-focus {
+                 .icon {
+                     fill: $brand-primary;
+                 }
+             }
          }
     }
 
     .gform_title {
          text-align: center;
+         color: $gray;
+         font-size: $font-size-base*1.3125;
+
+         @include media (">=md") {
+             text-align: left;
+         }
+    }
+
+    .ginput_container textarea {
+        height: 150px;
+    }
+
+    .gform_footer {
+        text-align: center;
+        padding-top: $spacer/2;
+
+        @include media (">=md") {
+             text-align: right;
+        }
+    }
+
+    .gform_button {
+         min-width: 195px;
+         font-weight: 700;
     }
 }
